[package]
name = "clickhouse-driver"
description = "Asynchronous tokio-based Yandex ClickHouse driver."
version = "0.1.0-alpha.3"
license = "MIT"
authors = ["dmitry dulesov <dmitry.dulesov@gmail.com>"]
homepage = "https://github.com/ddulesov/clickhouse_driver"
edition = "2018"
keywords = ["tokio", "database", "clickhouse"]
categories = ["database"]
repository = "https://github.com/ddulesov/clickhouse_driver"

[dependencies]
naive-cityhash = "0.2.0"
lz4 = "1.23.2"
thiserror = "1.0.30"
log = "0.4.14"
url = "2.2.2"
tokio = { version = "1.16.1", features = ["full"] }
tokio-native-tls = { version = "0.3.0", optional = true }
pin-project-lite = "0.2.8"
futures = "0.3.21"
hostname = "0.3.1"
chrono = "0.4.19"
chrono-tz = "0.6.1"
crossbeam = "0.8.1"
slab = "0.4.5"
parking_lot = "0.12.0"
uuid = { version = "0.8.2", features = ["v4"] }
lazy_static = "1.4.0"
rand = "0.8.5"
byteorder = "1.4.3"
bytes = "1.1.0"

[features]
tls = ["tokio-native-tls"]
recycle = []
int128 = []
extra = []

[[example]]
name = "insert-select"

[[example]]
name = "bulk-insert"

[[example]]
name = "select"

[[example]]
name = "array"

[[test]]
name = "pool"

[[test]]
name = "query"

[[test]]
name = "insert"
