[package]
name = "clickhouse-driver"
description = "Asynchronous tokio-based Yandex ClickHouse driver."
version = "0.1.0-alpha.3"
license = "MIT"
authors = ["dmitry dulesov <dmitry.dulesov@gmail.com>"]
homepage = "https://github.com/ddulesov/clickhouse_driver"
edition = "2018"
keywords = ["tokio", "database", "clickhouse"]
categories = ["database"]
repository = "https://github.com/ddulesov/clickhouse_driver"

[dependencies]
naive-cityhash = "0.2"
lz4 = "1.23"
thiserror = "1.0"
log = "0.4"
url = "2.2"
tokio = { version = "1.16", features = ["full"] }
tokio-native-tls = { version = "0.3", optional = true }
pin-project-lite = "0.2"
futures = "0.3"
hostname = "0.3"
chrono = "0.4"
chrono-tz = "0.6"
crossbeam = "0.8"
slab = "0.4"
parking_lot = "0.12"
uuid = { version = "0.8", features = ["v4"] }
once_cell = "1.9"
rand = "0.8"
byteorder = "1.4"
bytes = "1.1"

[features]
tls = ["tokio-native-tls"]
recycle = []
int128 = []
extra = []

[[example]]
name = "insert-select"

[[example]]
name = "bulk-insert"

[[example]]
name = "select"

[[example]]
name = "array"

[[test]]
name = "pool"

[[test]]
name = "query"

[[test]]
name = "insert"
